Issue2: use LinkedList for log messages